--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "autoprefixer": "^10.4.0",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.4",
         "resolve-url-loader": "^4.0.0",
         "sass": "^1.44.0",
         "sass-loader": "^12.1.0",
+        "tailwindcss": "^2.2.19",
         "vue-loader": "^15.9.8",
         "vue-template-compiler": "^2.6.14"
     },
